[tool.poetry]
name = "bobolink"
version = "0.1.0"
description = "bobolink stores bookmarks and helps you search for them later"
authors = ["jtanza <tanzajohn@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jtanza/bobolink-cli"
repository = "https://github.com/jtanza/bobolink-cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bobolink = "bobolink.main:cli"
